fix: white spaces for \q1 and \q2 close #54

--- a/src/global.css
+++ b/src/global.css
@@ -43,11 +43,11 @@
 }
 .ASS-dialogue[data-wrap-style="1"] {
   word-break: break-word;
-  white-space: normal;
+  white-space: pre-wrap;
 }
 .ASS-dialogue[data-wrap-style="2"] {
   word-break: normal;
-  white-space: nowrap;
+  white-space: pre;
 }
 
 .ASS-dialogue [data-border-style="1"] {
